Crash on using Converted Text to Curve in Geometry Nodes #88262

Closed
opened 2021-05-13 18:54:32 +02:00 by Johnny Matthews · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon Pro WX 3200 Series ATI Technologies Inc. 4.5.13559 Core Profile Context FireGL 26.20.11002.7001

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-12 23:52, hash: 06e62adfb8
Worked: Never

Short description of error
When trying to use a converted to curve text object in the "curve to mesh" node, when a profile curve is connected Blender crashes

Exact steps for others to reproduce the error

  • Add Text Object
  • Convert Text Object to Curve
  • Add Bezier Circle
  • Add GeoNode Tree to Default Cube
  • Pull in text curve and beziercircle to geo nodes from outliner
  • Add a curve to mesh node
  • connect curve to mesh to output
  • Connect textcurve node to 'curve'
  • Connect beziercurve to 'profile curve'
  • crash

See attached file crash.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon Pro WX 3200 Series ATI Technologies Inc. 4.5.13559 Core Profile Context FireGL 26.20.11002.7001 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-12 23:52, hash: `06e62adfb8` Worked: Never **Short description of error** When trying to use a converted to curve text object in the "curve to mesh" node, when a profile curve is connected Blender crashes **Exact steps for others to reproduce the error** - Add Text Object - Convert Text Object to Curve - Add Bezier Circle - Add GeoNode Tree to Default Cube - Pull in text curve and beziercircle to geo nodes from outliner - Add a curve to mesh node - connect curve to mesh to output - Connect textcurve node to 'curve' - Connect beziercurve to 'profile curve' - crash See attached file [crash.blend](https://archive.blender.org/developer/F10095114/crash.blend)
Author
Member

Added subscriber: @guitargeek

Added subscriber: @guitargeek
Hans Goudey self-assigned this 2021-05-13 19:45:00 +02:00

Added subscriber: @someuser

Added subscriber: @someuser

can confirm at Windows 7 + blender-3.0.0-06e62adfb8f2-windows64{F10095769}

Untitled2.png

can confirm at Windows 7 + blender-3.0.0-06e62adfb8f2-windows64{[F10095769](https://archive.blender.org/developer/F10095769/crash.crash.txt)} ![Untitled2.png](https://archive.blender.org/developer/F10095770/Untitled2.png)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by db59f0b943

This issue was referenced by db59f0b943acd684b2c571e5ef30a4c53e6ab5c4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88262
No description provided.